--- a/src/app/navigation/menu/menu.component.html
+++ b/src/app/navigation/menu/menu.component.html
@@ -1,7 +1,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Little Store Angular</a>
+      <a class="navbar-brand" [routerLink]="['/home']">Little Store Angular</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -11,10 +11,10 @@
             <a class="nav-link"  href="#">Products</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link"  href="#">About</a>
+            <a class="nav-link"  [routerLink]="['/about']">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link"  href="#">Contact</a>
+            <a class="nav-link"  [routerLink]="['/contact']">Contact</a>
           </li>
           <li class="nav-item">
               <a class="nav-link" href="#">Features</a>
