--- a/src/app/navigation/menu/menu.component.html
+++ b/src/app/navigation/menu/menu.component.html
@@ -8,7 +8,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link"  href="#">Products</a>
+            <a class="nav-link"  [routerLink]="['/products']">Products</a>
           </li>
           <li class="nav-item">
             <a class="nav-link"  [routerLink]="['/about']">About</a>
