--- a/src/app/products/products-list/products-list.component.html
+++ b/src/app/products/products-list/products-list.component.html
@@ -7,11 +7,29 @@
                         <img src="/assets/{{product.image}}" height="164px" width="253px" alt="">
                     </div>
                 </a>
-                <div class="card-body">
-                    <h4 class="card-title"> {{ product.name }}</h4>
-                    <p>For only:</p>
-                    <div><h4>R$ {{ product.value}}</h4></div>
+
+                <h4 class="card-title"> {{ product.name | titlecase }}</h4>
+                
+                <div [ngSwitch]="product.promotion">
+                    <p *ngSwitchCase="true">Promotion!</p>
+                    <p *ngSwitchCase="false">For only:</p>
                 </div>
+
+                <div *ngIf="product.promotion" class="card-body">
+                    <div><h4 class="card-text">From:
+                        <small>
+                            <del>
+                                {{ product.value | currency:'BRL':"symbol":'1.2-2':'pt'}}
+                            </del>
+                        </small>
+                        For: {{ product.promotionValue | currency:'BRL':"symbol":'1.2-2':'pt'}}
+                    </h4></div>
+                </div>
+                
+                <div *ngIf="!product.promotion" class="card-body">
+                    <div><h4>{{ product.value | currency:'BRL':"symbol":'1.2-2':'pt'}}</h4></div>
+                </div>
+                
                 <div class="card-footer">
                     <a class="btn btn-primary" [routerLink]="['/cart', product.id]">
                         <span class="fa fa-shopping-cart"></span> Buy
