--- a/src/app/navigation/menu/menu.component.html
+++ b/src/app/navigation/menu/menu.component.html
@@ -11,6 +11,9 @@
             <a class="nav-link"  [routerLink]="['/products']">Products</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link"  [routerLink]="['/register']">Register</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link"  [routerLink]="['/about']">About</a>
           </li>
           <li class="nav-item">
